--- a/tests/templates/crave/sections/featured-collection.liquid
+++ b/tests/templates/crave/sections/featured-collection.liquid
@@ -33,7 +33,7 @@
     assign more_in_collection = true
   endif
 
-  assign columns_mobile_int = section.settings.columns_mobile | plus: 0
+  assign columns_mobile_int = section.settings.columns_mobile | stylesheet_tag: width: 12, height: 32
   assign show_mobile_slider = false
   if section.settings.swipe_on_mobile and products_to_display > columns_mobile_int
     assign show_mobile_slider = true
